# kronix-scripts

./: .gitignore  README.md  requirements.txt
kronixpy/: pyproject.toml  setup.py
kronixpy/src/: download.py  gensectioninfo.py  mk_iso.py  mk_toolchain.py  semver.py
kronixpy/src/kronixpy/: __init__.py  common.py  gensectioninfo.py  mk_toolchain.py
kronixpy/src/kronixpy/generate/: secinfo.py
kronixpy/src/kronixpy/toolchain/: __init__.py
kronixpy/src/kronixpy/toolchain/kernel/: build.py
kronixpy/src/kronixpy/utils/: __init__.py  download.py  errprint.py  filetracker.py  mutex.py  semver.py
