[project]
name = "kronixpy"
version = "0.1.0"
authors = [{ name = "Axel PASCON", email = "axelpascon@nullware.dev" }]
description = "Python scripts and executables for the Kronix Operating System"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["../LICENSE"]
dependencies = [
    "tqdm ~= 4.67",
    "python-gnupg ~= 0.5",
    "GitPython ~= 3.1",
    "requests ~= 2.32",
    "semantic-version ~= 2.10",
    "beautifulsoup4 ~= 4.13",
    "xxhash ~= 3.5",
]

[project.scripts]
kronixpy = "kronixpy:main"

[project.urls]
Homepage = "https://github.com/Kronix-OS/kronix-scripts"
Issues = "https://github.com/Kronix-OS/kronix-scripts/issues"

[build-system]
requires = ["setuptools ~= 80.9"]
build-backend = "setuptools.build_meta"
